retail-media/v2024.10/docs/onsite-sponsored-products.mdx
---
title: "Overview"
---

1. Guides for Retail Media API

## Line Items

<Frame>
![](/images/retail-media/v2024.10/docs/659142a-lineitem1.png)
</Frame>

Each campaign consists of one or several line items. With the Criteo Retail Media API, you can run an ad only after creating a campaign and, at least, one line item.

A line item is where you will select the products and the retailer you want to advertise. Each line item can consist of multiple featured products but can only run across one retailer. You will need to create multiple line items to run across multiple retailers.

Several line item settings also help you spend your budget wisely and optimize delivery.

To see all of your existing line items, please refer to [line items settings](/retail-media/v2024.10/docs/line-items)

💡 **Things to Know**

* A line item holds promoted products to advertise on any single retailer.

* Line items have bid settings, start & end dates, and optional budgeting & pacing controls.

* Budgets may additionally be controlled at the campaign level.

* Several reports are available to measure line item performance.

* Campaigns are limited to 10,000 non-archived line items.

* Line items are archived automatically 90 days after their end date.

## Keywords

The Criteo API provides the capability to control search placements based on keywords that shoppers may use on a search page. Using a single API call, you can specify which keywords to target or avoid, and optimize your line item by setting bids on the most relevant keywords.

### Negative Keyword Targeting

<Info>
  **NOTES**

  This endpoint and its capabilities apply **ONLY** to Onsite Sponsored Products Campaigns & Line Items. Negative keyword targeting allows you to specify keywords on which you do not want your ads to appear (applies to search inventory).
</Info>

Negative keyword targeting helps determine where a line item should or should not serve, based on product keywords that shoppers use in searches or purchases.

Negative keywords can be specified as either **Broad Match** or **Exact Match**.

| Match Type  | Negative keyword | Ads won't show for                             | Ads may show for                           |
| ----------- | ---------------- | ---------------------------------------------- | ------------------------------------------ |
| Broad match | Men's shoes      | Men shoes, Blue men’s shoes, Men's shoe size 9 | Shoes, Boy’s shoes, Men’s basketball shoes |
| Exact match | Men’s shoes      | Men’s shoes, Mens shoes, Mens shoe             | Shoes, Blue men’s shoes, Mens shoe size 9  |

<Frame caption="**Exact match** blocks ads from serving for specific keywords, while broad match blocks ads for a range of similar terms.  is considered a subset of exact match, meaning keywords set as broad will be treated as both broad and exact matches.">
  <img src="/images/retail-media/v2024.10/docs/39b3f99-negativekeyword2.png" />

  **Broad match**
</Frame>

### Submitted Keywords

Submitted (or Positive) keyword targeting enables targeting based on a pool of search phrases that closely match what shoppers type. The API allows you to specify these phrases using the `PositiveExactMatch` match type, comparing the shopper's search term with your specified keywords for an exact match.

[Submitted Keywords](https://help.retailmedia.criteo.com/kb/guide/en/submitted-keywords-pWrW3V33fn/Steps/1632115) will always be **Exact Match**.

| Submitted keyword match type | Positive keyword | Ads will show for                        | Ads won’t show for                            |
| ---------------------------- | ---------------- | ---------------------------------------- | --------------------------------------------- |
| Exact match                  | Women's shoes    | Women's shoes, Womens shoes, Womens shoe | Shoes, Blue women’s shoes, Womens shoe size 9 |

#### Keyword Normalization Involves:

* Removing stop words (e.g., "a," "the," "at").

* [Stemming ](https://help.retailmedia.criteo.com/kb/guide/en/keyword-bidding-oBNia2gtXt/Steps/2150023,2150048,2150049)remaining words by trimming prefixes and suffixes ("runner" => "run").

* Sorting remaining words alphabetically.

You can also prune phrases using `NegativeExactMatch` and `NegativeBroadMatch` to remove unwanted matches.

* **Negative exact match**: Removes phrases that match the normalized keyword exactly.

* **Negative broad match**: Removes phrases that match any part of a normalized keyword.

The remaining positive phrases are sent to delivery for bid qualification on search pages, while delivery does not use negative keywords.

#### Submitted Keyword Approval Workflow

When you submit a positive keyword, it enters a pending state. Criteo’s validation system will automatically review and approve or reject the keyword:

* If the keyword is already mapped in the automated keyword model, it is approved.

* If the keyword contains a competitor's brand name, it is rejected and deactivated.

* If the keyword cannot be validated automatically, a Criteo reviewer will manually assess its eligibility..

<Frame>
![](/images/retail-media/v2024.10/docs/824f121-KWS.png "KWS.png")
</Frame>

### Keyword Bidding

* Keyword bidding offers more granular control over your ad spend by allowing specific bids on keywords.

* The bid must respect the minimum CPC bid of the line item.

<Info>
  **Note**

  If the line item has a maximum CPC bid set, this will always be enforced, even if a keyword bid exceeds it.
</Info>

**Outcomes Based on Keyword Status:**

* **Approved:** Keyword bids take effect immediately.

* **In Review:**: Bids are not effective until the keyword is approved.

* **Rejected:** Bids have no effect.

<Info>
  **Additional Resources**

  To learn more about Criteo keyword services, explore these articles:

  * [Criteo Keyword Model](/retail-media/v2024.10/docs/positive-keyword-targeting)
  * [Keyword Bidding](https://help.retailmedia.criteo.com/kb/guide/en/keyword-bidding-oBNia2gtXt/Steps/2150023,2150048)
  * [Submitted Keyword](https://help.retailmedia.criteo.com/kb/guide/en/submitted-keywords-pWrW3V33fn/Steps/1632115)
  * [Negative Keyword](https://help.retailmedia.criteo.com/kb/guide/en/negative-keyword-targeting-zgMmEUbU8V/Steps/1208564)
</Info>

***

[Promoted Products](/retail-media/v2024.10/docs/promoted-products)

[Onsite Sponsored Products Line Items](/retail-media/v2024.10/docs/onsite-sponsored-products-line-items)
